--- a/all-modal.html
+++ b/all-modal.html
@@ -85,6 +85,7 @@
                     			<a href="#" class="btn btn-primary" onclick="objBel.sevenModal();">Septimo modal</a>
                     		</div>
                     		<div class="col-md-3">
+                                <a href="#" class="btn btn-primary" onclick="objBel.eightModal();">Octavo modal</a>
                     		</div>
                     	</div>
                     </div>
@@ -369,6 +370,22 @@
 		    </div>
 	  	</div>
 	</div>
+    <!--End Modal-->
+    <!--Octavo Modal-->
+    <div class="modal fade custon-modal m-pedido-e" id="eightModal" tabindex="-1" role="dialog" aria-labelledby="eightModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
+                <div class="fluid-list cnt-body-m custon-on">
+                    <p>Gracias!</p>
+                    <p>tu pedido ha sido recibido con exito, en breve nos comunicaremos contigo.</p>
+                </div>
+                <div class="fluid-list m-footer">
+                    <a href="#" class="btn btn-belcorp">Aceptar</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--End Modal-->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
