--- a/producto.html
+++ b/producto.html
@@ -60,33 +60,72 @@
         </header>
         <section>
             <div class="fluid-list wrapper">
-                <div class="fluid-list header-cupon" style="background: url(img/bg-cupon.jpg) no-repeat;background-size: cover;background-position: center center;">
-                	<div class="container">
-                		<div class="item-cupon">
-                			<div class="fluid-list logo-cupon">
-                				<span><img src="img/logo-cupon.png"></span> Tanta
-                			</div>
-                			<p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                			<div class="fluid-list desc-ut">
-                				<span class="left">50% dscto</span>
-                				<a href="#" class="btn-belcorp right">Utilizar</a>
-                			</div>
-                		</div>
-                	</div>
+                <div class="fluid-list header-cupon" style="background: url(img/banner-r.jpg) no-repeat;background-size: cover;background-position: center center;">
+                	
                 </div>
                 <div class="fluid-list content-cupon">
                 	<div class="container">
                 		<div class="body-cupon">
-                			<h3>Condiciones de uso</h3>
-                			<p>El descuento se aplica sobre el precio vigente al momento del consumo.<br>
-							Máximo 5 cupones por mesa.<br>
-							No acumulable con otros descuentos, promociones ni campañas.<br>
-							No válido días feriados ni festivos.<br>
-							Válido de lunes a sábado.<br>
-							El beneficio aplica solamente presentando cupón impreso o cupón en aplicativo móvil de lo contrario no podrán acceder al descuento.</p>
-							<h3>Locales</h3>
-							<img src="img/map.jpg">
-							<p>Dirección:  Av Primavera 545 Chacarilla – San Borja / Av Conquistadores Nº 1048 San Isidro / Av. Salaverry Nº 2370 4to nivel Jesús María – C.C Real Plaza Salaverry / Av. La Marina 2000 3er piso CC. Plaza San Miguel</p>
+                			<h1>Juego de terrazas S/ 199</h1>
+                			<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                			<h3>Para finalizar el pedido ingresa los siguientes datos.</h3>
+                			<p>Los datos ingresados son legítimos y correctos.</p>
+                			<form class="cnt-form-tw">
+					      		<div class="form-group">
+					      			<label>Nombre</label>
+					      			<div class="fluid-list cnt-input">
+			                            <input type="text" class="form-control" id="name" value="Hola">
+			                            <span class="glyphicon glyphicon-ok-sign ico-success" aria-hidden="true"></span>
+			                        </div>
+			                    </div>
+			                    <div class="form-group">
+			                    	<label>Email</label>
+			                    	<div class="fluid-list cnt-input">
+			                    		<input type="email" class="form-control" id="email" value="jerspr@gmail.com">
+			                            <span class="glyphicon glyphicon-ok-sign ico-success" aria-hidden="true"></span>
+			                    	</div>
+			                    </div>
+			                    <div class="form-group">
+					      			<label>Dirección</label>
+					      			<div class="fluid-list cnt-input">
+			                            <input type="text" class="form-control" id="direc" value="Av. javier prado">
+			                            <span class="glyphicon glyphicon-ok-sign ico-success" aria-hidden="true"></span>
+			                        </div>
+			                    </div>
+			                    <div class="form-group">
+					      			<label>Referencia</label>
+					      			<div class="fluid-list cnt-input">
+			                            <input type="text" class="form-control" id="ref" value="Cruce de">
+			                            <span class="glyphicon glyphicon-ok-sign ico-success" aria-hidden="true"></span>
+			                        </div>
+			                    </div>
+			                    <div class="form-group">
+					      			<label>Teléfono</label>
+					      			<div class="fluid-list cnt-input">
+			                            <input type="text" class="form-control" id="telf" value="990399029">
+			                            <span class="glyphicon glyphicon-ok-sign ico-success" aria-hidden="true"></span>
+			                        </div>
+			                    </div>
+			                    <div class="form-group">
+					      			<label>Documento de identidad</label>
+					      			<div class="fluid-list cnt-input">
+			                            <input type="text" class="form-control" id="dni" value="">
+			                            <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
+			                        </div>
+			                    </div>
+			                    <div class="form-group">
+			                        <label for="num">Cantidad de producto</label>
+			                        <div class="fluid-list cnt-input">
+			                            <select class="form-control">
+			                                <option>1</option>
+			                                <option>2</option>
+			                            </select>
+			                        </div>
+			                    </div>
+					      		<div class="fluid-list m-footer">
+			                    	<button type="submit" class="btn btn-belcorp">Enviar Pedido</button>
+						      	</div>
+					      	</form>
 							<h3>Términos y condiciones</h3>
 							<p>Los datos ingresados son legítimos y correctos. Conozco el uso que se le dará a los datos que he proporcionado a Beneficios.pe. Entiendo que los Proveedores son los únicos responsables por cualquier inconveniente con los bienes y servicios ofrecidos a través de la Página Web. Sé cual es la información y datos personales requeridos para poder acceder a los bienes y servicios ofrecidos a través de la Página Web. He autorizado a mi Empleador a brindar o he brindado directamente a Belia mis datos personalespara poder ingresar a la Pagina Web Sé cual es la información y datos personales requeridos para poder acceder a los bienes y servicios ofrecidos a través de la Página Web. He autorizado a mi Empleador a brindar o he brindado directamente a Belia mis datos personalespara poder ingresar a la Pagina Web Sé cual es la información y datos personales requeridos para poder acceder a los bienes y servicios ofrecidos a través de la Página Web. He autorizado a mi Empleador a brindar o he brindado directamente a Belia mis datos personalespara poder ingresar a la Pagina Web.</p>
                 		</div>
