--- a/index.html
+++ b/index.html
@@ -76,13 +76,90 @@
                             </div>
                         </div>
                     </div>
+                    <div class="fluid-list slider-home box-sombra">
+                        <div class="fluid-list sombra-interna">
+                            <div class="slider slider-promocion box-sombra-caja">
+                                <div>
+                                    <a href="#" target="_blank">
+                                        <img class="img-responsive" src="http://admin.beneficios.pe/elements/galeria/2017-11-13_15-43-02-1156.png"/>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#" target="_blank">
+                                        <img class="img-responsive" src="http://admin.beneficios.pe/elements/galeria/2017-11-13_15-44-11-1169.png"/>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#" target="_blank">
+                                        <img class="img-responsive" src="http://admin.beneficios.pe/elements/galeria/2017-11-14_12-37-56-8193.png"/>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fluid-list cnt-productos-one">
+                        <article class="item-product">
+                            <div class="content-bloque first-bloque">
+                                <h2><a href="#" title="">Veggie Pizza</a></h2>
+                                <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                <div class="b-prec">
+                                    <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                    <a href="#" class="btn-belcorp right">Detalle</a>
+                                </div>
+                            </div>
+                            <div class="content-bloque second-bloque">
+                                <figure>
+                                    <a href="#" title="" style="background: url(img/item.jpg) no-repeat;background-size: cover;background-position: center center;">
+                                        <img src="img/item.jpg" alt="" />
+                                    </a>
+                                </figure>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="fluid-list cnt-productos-two">
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Veggie Pizza</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Tanta</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
                     <div class="fluid-list cnt-productos">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">S/20</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -90,11 +167,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -102,11 +182,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -114,11 +197,16 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">S/20</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -126,11 +214,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -138,11 +229,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -150,11 +244,16 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">S/20</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -162,11 +261,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -174,11 +276,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -186,11 +291,16 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">S/20</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -198,11 +308,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -210,11 +323,14 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="col-xs-12 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
                                     <figure>
                                         <a href="#" title="">
                                             <img src="img/item.jpg" alt="" />
@@ -255,6 +371,7 @@
     </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
