--- a/producto.html
+++ b/producto.html
@@ -67,7 +67,7 @@
                 	<div class="container">
                 		<div class="body-cupon">
                 			<h1>Juego de terrazas S/ 199</h1>
-                			<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                			<p>¡Oferta Express! S/ 39 por Olla a presión de aluminio virgen. Capacidad: 6 lts., marca Umco. Con tapa válvula y mangos ergonómicos de baquelita + Delivery. Precio referencial Lima S/ 180 / Precio referencial Provincia S/ 210</p>
                 			<h3>Para finalizar el pedido ingresa los siguientes datos.</h3>
                 			<p>Los datos ingresados son legítimos y correctos.</p>
                 			<form class="cnt-form-tw">
@@ -140,7 +140,10 @@
 	                                <article class="item-product">
 	                                    <h2><a href="#" title="">Veggie Pizza</a></h2>
 	                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-	                                    <div class="fluid-list b-prec">S/20</div>
+	                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
 	                                    <figure>
 	                                        <a href="#" title="">
 	                                            <img src="img/item.jpg" alt="" />
@@ -152,7 +155,10 @@
 	                                <article class="item-product">
 	                                    <h2><a href="#" title="">Tanta</a></h2>
 	                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-	                                    <div class="fluid-list b-prec">50% dscto</div>
+	                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
 	                                    <figure>
 	                                        <a href="#" title="">
 	                                            <img src="img/item.jpg" alt="" />
@@ -164,7 +170,10 @@
 	                                <article class="item-product">
 	                                    <h2><a href="#" title="">Bon Beef</a></h2>
 	                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
-	                                    <div class="fluid-list b-prec">30% dscto</div>
+	                                    <div class="fluid-list b-prec">
+                                        <em>De <span class="p-bef">S/299</span> a <span>S/59</span></em>
+                                        <a href="#" class="btn-belcorp right">Detalle</a>
+                                    </div>
 	                                    <figure>
 	                                        <a href="#" title="">
 	                                            <img src="img/item.jpg" alt="" />
